HP ばーにめもりいれるやつ

--- a/moe-color-tester/index.html
+++ b/moe-color-tester/index.html
@@ -296,9 +296,7 @@
     <p>昔、もえからー俺版みたいなやつで、染色シミュ(色の調合ではなく実際の服の色を出すやつ)を公開してたんですが、MoE 休止してる間にサイト消えてて、元のソースも手元に残ってないっていう。かろうじて覚えてたんで、あのシミュを作る工程を自動化したものがこれです。わかってる人用の雑な作り。</p>
   </section>
 
-<script type="text/javascript">
-  "use strict"
-
+<script type="module">
   const raceList = [
     { key: 'nm', name: 'にゅたお', },
     { key: 'nf', name: 'にゅたこ', },
