ドットの背景ごと入れ替えバージョンを追加

--- a/moe-skin-addmark/index.html
+++ b/moe-skin-addmark/index.html
@@ -134,7 +134,12 @@
         file: 'stripe-overlay-wide.png',
       },
       {
-        name: 'HP バーの外側にドットをつける',
+        name: 'HP バーの外側にドットをつける (入れ替え)',
+        file: 'dot-swap.png',
+        type: 'checkbox',
+      },
+      {
+        name: 'HP バーの外側にドットをつける (重ねる)',
         file: 'dot-overlay.png',
         type: 'checkbox',
       },
